samples/_failures_safe/1761149124_c63d2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1de3bf43.c: In function ‘main’:
./samples/SAFE/__tmp_1de3bf43.c:154:42: error: expected ‘)’ at end of input
  154 |         if (parse_log_line(line, &entries
      |                           ~              ^
      |                                          )
./samples/SAFE/__tmp_1de3bf43.c:154:9: error: expected declaration or statement at end of input
  154 |         if (parse_log_line(line, &entries
      |         ^~
./samples/SAFE/__tmp_1de3bf43.c:154:9: error: expected declaration or statement at end of input
